--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.19.2",
     "graphql": "^16.9.0",
     "mongoose": "^8.5.4",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
