--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apollo-server-express": "^3.13.0",
     "express": "^4.19.2",
     "graphql": "^16.9.0",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
