--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.0.0",
     "@reduxjs/toolkit": "^2.2.7",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "apollo-server-express": "^3.13.0",
     "express": "^4.19.2",
     "graphql": "^16.9.0",
@@ -20,7 +17,6 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -28,7 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "coverage": "npm test --coverage"
   },
   "eslintConfig": {
     "extends": [
@@ -47,5 +44,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "jest": "^27.5.1",
+    "jest-fetch-mock": "^3.0.3",
+    "react-router-dom": "^6.26.1"
   }
 }
