--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@apollo/client": "^3.11.4",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^6.0.1",
     "@mui/material": "^6.0.0",
     "@reduxjs/toolkit": "^2.2.7",
     "apollo-server-express": "^3.13.0",
@@ -14,8 +18,10 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
